tests/NormalTests/paczka1/small_fuzzy/19585305.err
Error in line 1: 3DO S494 45,9
Error in line 2: k4oVIL A399 69,5
